# test-rpg

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md
data/Enemies/: readme.md
docs/: Equipment.md  Features.md  Features.txt  Game-Flow.txt  Gameflow.md  Inventory.md  Shops.md  Stats.md  Stats.txt  readme.md  readme.txt
includes/: ASCArt.h  Battle.h  Character.h  Printer.h  Standard.h  readme.md  readme.txt
lib/: readme.md  readme.txt
resources/: Future.md  References.md  References.txt  readme.md  readme.txt
src/: Application.cpp  readme.md  readme.txt
test-rpg/: readme.md
test-rpg/data/: Player.char  readme.md
test-rpg/data/Enemies/: Goblin.enemy  readme.md
test-rpg/data/Items/: Potion.item  readme.md
test-rpg/docs/: Art.md  Battle.md  Code.md  Features.md  Gameflow.md  Stats.md  readme.md
test-rpg/includes/: ASCArt.h  Battle.h  Character.h  FileManager.h  Game.h  MathEngine.h  Printer.h  Standard.h  config.h  readme.md
test-rpg/lib/: readme.md
test-rpg/resources/: Architecture.md  References.md  readme.md
test-rpg/src/: ASCArt.cpp  Application.cpp  Battle.cpp  Character.cpp  FileManager.cpp  FileSystem.cpp  Game.cpp  MathEngine.cpp  Printer.cpp  Standard.cpp  readme.md
